overlapping navbar bug fixid

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html{
     width: 100%;
     padding: 2rem 4rem;
     background-color:var(--bg-color);
+    z-index: 1;
 }
 .logo{
     font-size: 2.5rem;
@@ -164,6 +165,7 @@ p{
 .services{
     padding-top: 10rem;
     padding-bottom: 5rem;
+    
 }
 .container-box{
     display: flex;
@@ -214,13 +216,15 @@ font-size: 1.5rem;
     grid-template-columns: repeat(3 ,1fr);
     gap: 2rem;
     align-items: center;
+    overflow: hidden;
+   
     
 }
 .port-box{
-    position: relative;
+    position :relative;
     overflow: hidden;
     display: flex;
-    height: 24rem;
+    height: 20rem;
     border-radius: 2rem;     
     box-shadow: 0 0 2rem var(--bg-color);
 }
